feat: show script from previous analysis (#155)
